Restructure with comments, add Pycharm project files and local assets

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # Default ignored files
 /shelf/
 /workspace.xml
+
+# Pycharm / JetBrains files
+.idea
+
+# scappamento user config files
 *.ini
 *.sql
+
+# Lorenzo random local files
+/Utils
