--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ requests~=2.24.0
 selenium~=3.141.0
 beautifulsoup4~=4.9.3
 mysql-connector-python~=8.0.11
-chromedriver_binary~=86.0.4240.22.0
+chromedriver_binary>=86.0.4240.22.0
