--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
 - '3.8'
 install:
 - pip install -r requirements.txt
-script: python -m unittest discover -s tests
+- pip install coverage
+- pip install coveralls
+script: coverage run -m unittest discover -s tests
 notifications:
   email: false
 before_deploy:
