--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ selenium~=3.141.0
 beautifulsoup4~=4.9.3
 mysql-connector-python~=8.0.11
 chromedriver_binary>=86.0.4240.22.0
+setuptools~=50.3.2
+xlwt~=1.3.0
