--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ chromedriver_binary>=86.0.4240.22.0
 setuptools~=50.3.2
 xlwt>=1.3.0
 numpy==1.19.3 # temp workaround to avoid this error: https://tinyurl.com/y3dm3h86
-pywin32
+pywin32>=300
