--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas>=1.1.2
-xlrd>=1.2.0
+xlrd>=2.0.1
 xlutils>=2.0.0
 requests~=2.24.0
 selenium~=3.141.0
@@ -9,4 +9,4 @@ chromedriver_binary>=86.0.4240.22.0
 setuptools~=50.3.2
 xlwt>=1.3.0
 numpy==1.19.3 # temp workaround to avoid this error: https://tinyurl.com/y3dm3h86
-pywin32>=300
+olefile>=0.46
