--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ requests~=2.24.0
 selenium~=3.141.0
 beautifulsoup4~=4.9.3
 mysql-connector-python~=8.0.11
-chromedriver_binary>=86.0.4240.22.0
+# chromedriver_binary>=86.0.4240.22.0
+chromedriver-autoinstaller>=0.2.2
 setuptools~=50.3.2
 xlwt>=1.3.0
 numpy==1.19.3 # temp workaround to avoid this error: https://tinyurl.com/y3dm3h86
